// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--list iot--list__full-height"
          >
            <div
              className="iot--list-header-container"
            >
              <div
                className="iot--list-header"
              >
                <div
                  className="iot--list-header--title"
                >
                  Gallery
                </div>
                <div
                  className="iot--list-header--btn-container"
                />
              </div>
              <div
                className="iot--list-header--search"
              >
                <div
                  aria-labelledby="iot--list-header--search-search"
                  className="bx--search bx--search--sm"
                  role="search"
                >
                  <svg
                    aria-hidden={true}
                    className="bx--search-magnifier"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5	C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                    />
                  </svg>
                  <label
                    className="bx--label"
                    htmlFor="iot--list-header--search"
                    id="iot--list-header--search-search"
                  >
                    Enter a value
                  </label>
                  <input
                    autoComplete="off"
                    className="bx--search-input"
                    id="iot--list-header--search"
                    onChange={[Function]}
                    placeholder="Enter a value"
                    role="searchbox"
                    type="text"
                    value=""
                  />
                  <button
                    aria-label="Clear search input"
                    className="bx--search-close bx--search-close--hidden"
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="iot--list--content__full-height iot--list--content"
            >
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Simple bar"
                        src="simple-bar-graph.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Simple bar"
                        >
                          Simple bar
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Time series"
                        src="line-graph.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Time series line"
                        >
                          Time series line
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Value / KPI"
                        src="value-kpi.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Value / KPI"
                        >
                          Value / KPI
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Image card"
                        src="image.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Image"
                        >
                          Image
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Table"
                        src="data-table.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Data table"
                        >
                          Data table
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor interactive 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <pre>
          {
    "title": "New card",
    "size": "SMALL",
    "type": "VALUE",
    "id": "card-1"
}
        </pre>
      </div>
      <div
        style={
          Object {
            "height": "calc(100vh - 6rem)",
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <div
          className="iot--card-editor"
        >
          <div
            className="iot--card-editor--content"
          >
            <div
              className="iot--list iot--list__full-height"
            >
              <div
                className="iot--list-header-container"
              >
                <div
                  className="iot--list-header"
                >
                  <div
                    className="iot--list-header--title"
                  >
                    Gallery
                  </div>
                  <div
                    className="iot--list-header--btn-container"
                  />
                </div>
                <div
                  className="iot--list-header--search"
                >
                  <div
                    aria-labelledby="iot--list-header--search-search"
                    className="bx--search bx--search--sm"
                    role="search"
                  >
                    <svg
                      aria-hidden={true}
                      className="bx--search-magnifier"
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5	C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                      />
                    </svg>
                    <label
                      className="bx--label"
                      htmlFor="iot--list-header--search"
                      id="iot--list-header--search-search"
                    >
                      Enter a value
                    </label>
                    <input
                      autoComplete="off"
                      className="bx--search-input"
                      id="iot--list-header--search"
                      onChange={[Function]}
                      placeholder="Enter a value"
                      role="searchbox"
                      type="text"
                      value=""
                    />
                    <button
                      aria-label="Clear search input"
                      className="bx--search-close bx--search-close--hidden"
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        aria-hidden={true}
                        fill="currentColor"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="iot--list--content__full-height iot--list--content"
              >
                <div
                  className="iot--list-item-parent"
                  data-floating-menu-container={true}
                >
                  <div
                    className="iot--list-item iot--list-item__selectable"
                    data_testid={null}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="iot--list-item--content"
                    >
                      <div
                        className="iot--list-item--content--icon iot--list-item--content--icon__left"
                      >
                        <img
                          alt="Simple bar"
                          src="simple-bar-graph.svg"
                        />
                      </div>
                      <div
                        className="iot--list-item--content--values"
                      >
                        <div
                          className="iot--list-item--content--values--main"
                        >
                          <div
                            className="iot--list-item--content--values--value"
                            title="Simple bar"
                          >
                            Simple bar
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--list-item-parent"
                  data-floating-menu-container={true}
                >
                  <div
                    className="iot--list-item iot--list-item__selectable"
                    data_testid={null}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="iot--list-item--content"
                    >
                      <div
                        className="iot--list-item--content--icon iot--list-item--content--icon__left"
                      >
                        <img
                          alt="Time series"
                          src="line-graph.svg"
                        />
                      </div>
                      <div
                        className="iot--list-item--content--values"
                      >
                        <div
                          className="iot--list-item--content--values--main"
                        >
                          <div
                            className="iot--list-item--content--values--value"
                            title="Time series line"
                          >
                            Time series line
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--list-item-parent"
                  data-floating-menu-container={true}
                >
                  <div
                    className="iot--list-item iot--list-item__selectable"
                    data_testid={null}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="iot--list-item--content"
                    >
                      <div
                        className="iot--list-item--content--icon iot--list-item--content--icon__left"
                      >
                        <img
                          alt="Value / KPI"
                          src="value-kpi.svg"
                        />
                      </div>
                      <div
                        className="iot--list-item--content--values"
                      >
                        <div
                          className="iot--list-item--content--values--main"
                        >
                          <div
                            className="iot--list-item--content--values--value"
                            title="Value / KPI"
                          >
                            Value / KPI
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--list-item-parent"
                  data-floating-menu-container={true}
                >
                  <div
                    className="iot--list-item iot--list-item__selectable"
                    data_testid={null}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="iot--list-item--content"
                    >
                      <div
                        className="iot--list-item--content--icon iot--list-item--content--icon__left"
                      >
                        <img
                          alt="Image card"
                          src="image.svg"
                        />
                      </div>
                      <div
                        className="iot--list-item--content--values"
                      >
                        <div
                          className="iot--list-item--content--values--main"
                        >
                          <div
                            className="iot--list-item--content--values--value"
                            title="Image"
                          >
                            Image
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="iot--list-item-parent"
                  data-floating-menu-container={true}
                >
                  <div
                    className="iot--list-item iot--list-item__selectable"
                    data_testid={null}
                    onClick={[Function]}
                    onKeyPress={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    <div
                      className="iot--list-item--content"
                    >
                      <div
                        className="iot--list-item--content--icon iot--list-item--content--icon__left"
                      >
                        <img
                          alt="Table"
                          src="data-table.svg"
                        />
                      </div>
                      <div
                        className="iot--list-item--content--values"
                      >
                        <div
                          className="iot--list-item--content--values--main"
                        >
                          <div
                            className="iot--list-item--content--values--value"
                            title="Data table"
                          >
                            Data table
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/CardEditor with no card defined (gallery view) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": "calc(100vh - 6rem)",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="iot--card-editor"
      >
        <div
          className="iot--card-editor--content"
        >
          <div
            className="iot--list iot--list__full-height"
          >
            <div
              className="iot--list-header-container"
            >
              <div
                className="iot--list-header"
              >
                <div
                  className="iot--list-header--title"
                >
                  Gallery
                </div>
                <div
                  className="iot--list-header--btn-container"
                />
              </div>
              <div
                className="iot--list-header--search"
              >
                <div
                  aria-labelledby="iot--list-header--search-search"
                  className="bx--search bx--search--sm"
                  role="search"
                >
                  <svg
                    aria-hidden={true}
                    className="bx--search-magnifier"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5	C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
                    />
                  </svg>
                  <label
                    className="bx--label"
                    htmlFor="iot--list-header--search"
                    id="iot--list-header--search-search"
                  >
                    Enter a value
                  </label>
                  <input
                    autoComplete="off"
                    className="bx--search-input"
                    id="iot--list-header--search"
                    onChange={[Function]}
                    placeholder="Enter a value"
                    role="searchbox"
                    type="text"
                    value=""
                  />
                  <button
                    aria-label="Clear search input"
                    className="bx--search-close bx--search-close--hidden"
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      fill="currentColor"
                      focusable="false"
                      height={16}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="iot--list--content__full-height iot--list--content"
            >
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Simple bar"
                        src="simple-bar-graph.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Simple bar"
                        >
                          Simple bar
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Time series"
                        src="line-graph.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Time series line"
                        >
                          Time series line
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Value / KPI"
                        src="value-kpi.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Value / KPI"
                        >
                          Value / KPI
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Image card"
                        src="image.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Image"
                        >
                          Image
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="iot--list-item-parent"
                data-floating-menu-container={true}
              >
                <div
                  className="iot--list-item iot--list-item__selectable"
                  data_testid={null}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  role="button"
                  tabIndex={0}
                >
                  <div
                    className="iot--list-item--content"
                  >
                    <div
                      className="iot--list-item--content--icon iot--list-item--content--icon__left"
                    >
                      <img
                        alt="Table"
                        src="data-table.svg"
                      />
                    </div>
                    <div
                      className="iot--list-item--content--values"
                    >
                      <div
                        className="iot--list-item--content--values--main"
                      >
                        <div
                          className="iot--list-item--content--values--value"
                          title="Data table"
                        >
                          Data table
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
